fix: module configuration

--- a/packages/cli/tsconfig.base.json
+++ b/packages/cli/tsconfig.base.json
@@ -23,7 +23,7 @@
     "noFallthroughCasesInSwitch": true,
     "noEmitOnError": false,
     "noErrorTruncation": false,
-    "allowJs": false,
+    "allowJs": true,
     "checkJs": false,
     "forceConsistentCasingInFileNames": true,
     "stripInternal": true,
@@ -32,7 +32,7 @@
     "noUncheckedIndexedAccess": false,
     "strictNullChecks": true,
     "baseUrl": ".",
-    "target": "ES2022",
+    "target": "ESNext",
     "module": "NodeNext",
     "incremental": true,
     "removeComments": false,
