--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hydra-manager/cli",
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "packageManager": "pnpm@9.10.0",
   "license": "MIT",
   "description": "A basic Effect CLI application",
