--- a/packages/tx-generator/package.json
+++ b/packages/tx-generator/package.json
@@ -7,7 +7,7 @@
     "npm": ">=10.5"
   },
   "author": "Golddy Dev <firingdev@gmail.com> (http://github.com/golddydev/)",
-  "type": "commonjs",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,6 +32,7 @@
     "dotenv": "^16.4.5",
     "flatted": "^3.3.2",
     "lodash": "^4.17.21",
+    "ora-classic": "^5.4.2",
     "p-limit": "^6.2.0",
     "p-retry": "^6.2.1",
     "ts-res": "^1.3.0"
