feat: cardano l1 wallet actions

--- a/packages/cli/tsconfig.base.json
+++ b/packages/cli/tsconfig.base.json
@@ -12,7 +12,7 @@
     "exactOptionalPropertyTypes": true,
     "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "nodenext",
     "lib": ["ES2022", "DOM"],
     "isolatedModules": true,
     "sourceMap": true,
