--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,15 +50,17 @@
     "tsup": "^8.2.4",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
   },
   "pnpm": {
     "patchedDependencies": {}
   },
   "dependencies": {
-    "@inquirer/prompts": "^7.2.1",
+    "@blockfrost/blockfrost-js": "^5.7.0",
     "@hydra-manager/tx-generator": "workspace:*",
-    "@lucid-evolution/lucid": "^0.4.18",
+    "@inquirer/prompts": "^7.2.1",
+    "@lucid-evolution/lucid": "^0.4.22",
     "cli-spinners": "^3.2.0",
     "dotenv": "^16.4.7",
     "inquirer-select-pro": "1.0.0-alpha.9",
