--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,7 +23,7 @@
     "test": "vitest run",
     "coverage": "vitest run --coverage",
     "copy-package-json": "tsx scripts/copy-package-json.ts",
-    "cron-job": "pm2 start ./src/bin.ts --name \"cron\" -- cron --participant Alice --job many-txs --interval 360"
+    "cron-job": "tsx ./src/bin.ts cron --participant Alice --job many-txs --interval 360 > ./cron.log 2>&1 &"
   },
   "devDependencies": {
     "@effect/cli": "latest",
@@ -48,7 +48,6 @@
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "pm2": "^5.4.3",
     "tsup": "^8.2.4",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
