--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -65,6 +65,7 @@
     "dotenv": "^16.4.7",
     "inquirer-select-pro": "1.0.0-alpha.9",
     "ora-classic": "^5.4.2",
+    "p-timeout": "^6.1.4",
     "stream-chain": "^3.3.2",
     "stream-json": "^1.9.1",
     "ws": "^8.18.0"
